--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "snu_class",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "name": "vite",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+  "devDependencies": {
+    "vite": "^4.2.0"
   }
 }
